# emacs-windows-service

./: .gitignore  CHANGELOG.md  README.md  emacs-service-in-windows.cabal
app/: Main.hs
