cabal-version:      2.4
name:               emacs-service-in-windows
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Yau-Hsien Huang
maintainer:         yauhsienhuang@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

--library
--  build-depends: base   >= 4.5 && < 5.0
--               , Win32-services
--               , process
--  default-language: Haskell2010
--  ghc-options:     -Wall
--  hs-source-dirs: app

executable emacs-service-in-windows
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends: base   >= 4.5 && < 5.0
               , Win32  >= 2.2 && < 2.9
               , Win32-errors >= 0.2 && < 0.3
               , Win32-services
               , process

--    build-depends:    base ==4.17.0.0
--                      errors == 2.3.0,
--                      Win32 == 2.13.4.0,
--                      Win32-services == 0.1
--    hs-source-dirs:   app
  ghc-options:     -Wall
  hs-source-dirs: app
  default-language: Haskell2010
